--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ h1 {
     font-family: verdana, sans-serif;
     font-size: 26px;
     color: rgb(36, 64, 65);
+    text-decoration-line: underline;
 }
 
 h2 {
@@ -22,12 +23,18 @@ h2 {
 button {
     font-size: 14px;
     font-family: verdana, sans-serif;
+    transition-duration: 1s;
 }
 
 button:hover {
     transition-duration: 1s;
     background-color: rgb(201, 118, 201);
+    font-size: 40px;
 }
+
+/* button:not(:hover) {
+    font-size: 14px;
+} */
 
 .entry {
     background-color: rgb(36, 64, 65);
